# SLM-Research-

./: -  .gitignore  CHANGELOG.md  CHANGES_SUMMARY.md  CONTRIBUTING.md  DEMO_PLAN.md  FULL_WORKING_DEMO.md  OLLAMA_SETUP.md  README.md  create_test_patch.py  demo_output.txt  demo_working.py  dry_run_output.txt  paper_draft.md  pyproject.toml  pytest_out.txt  pytest_output.txt  pytest_report.json  pytest_report_temp.json  run_contract_violation.py  run_full_test.py  run_harness_multi.py  run_sample_task.py  sage.toml  simulate_sage_run.py  test.diff  test_patch.diff  validate_output.txt
.kiro/steering/: product.md  structure.md  tech.md
contracts/: ollama_client_generate.yaml  validation_runner.yaml  validation_runner_validate_and_apply.yaml
docs/: benchmark_protocol.md  demo_script.md  failure_taxonomy.md  reproducibility.md
docs/paper/: paper.md
evals/: baseline.py  runner.py
evals/fixtures/: dummy_multi_1.py  dummy_multi_2.py  dummy_multi_3.py
evals/tasks/: context_drift_01.yaml  context_drift_02.yaml  context_drift_03.yaml  context_drift_04.yaml  context_drift_05.yaml  contract_violation_01.yaml  contract_violation_02.yaml  contract_violation_03.yaml  contract_violation_04.yaml  contract_violation_05.yaml  edge_case_01.yaml  edge_case_02.yaml  edge_case_03.yaml  edge_case_04.yaml  edge_case_05.yaml  multi_file_01.yaml  (+5 more)
examples/: demo_clean.py  demo_verify.py  run_dry_task.py
local_sage/: __init__.py  __main__.py  cli.py  config.py
scripts/: run_benchmark.py  run_prevalidate.py
tests/: __init__.py  conftest.py  strategies.py  test_cli.py  test_code_quality.py
tools/: run_sage_cmds.py
(+111 files in other folders)
