[project]
name = "local-sage"
version = "0.1.0"
description = "A repo-aware, validation-gated coding agent for Qwen2.5 Coder 7B on consumer hardware."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "langgraph>=0.3,<0.4",
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
    "networkx==3.3",
    "mem0ai==0.1.*",
    "rich==13.*",
    "typer==0.12.*",
    "httpx==0.27.*",
    "sentence-transformers==3.*",
    "qdrant-client>=1.9,<2.0",
    "whatthepatch>=1.0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-json-report>=1.5",
    "hypothesis>=6.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.4",
]

[project.scripts]
sage = "local_sage.__main__:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["local_sage*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"
filterwarnings = [
    "ignore:.*:DeprecationWarning:langchain_core.*",
    "ignore:.*:DeprecationWarning:langgraph.*",
]
markers = [
    "llm_required: Tests that require any LLM provider (Groq or Ollama) for AI-powered contract fixing",
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501", "SIM117"]
